--- a/src/style.css
+++ b/src/style.css
@@ -20,3 +20,16 @@ body{
 .login-btn{
     width: 100%;
 }
+
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.link-elem{
+    text-decoration: none;
+    margin: 0 10px;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
