--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,7 @@ body{
     border: 1px solid white ;
     margin: 5px;
     height: 30px;
-    width: 90%;
+    width: 91%;
     border: 1px solid white;
     background-color: transparent;
     color: white;
@@ -50,4 +50,19 @@ body{
 
 .input:focus{
     outline-style: none;
+}
+
+.task{
+    list-style: none;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+    margin: 20px auto;
+    background-color: white;
+    color: black;
+    height: 35px;
+    align-items: center;
+    padding: 5px;
+    border-radius: 5px;
 }
